completato header superiore e barra menu

--- a/index.html
+++ b/index.html
@@ -4,27 +4,104 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+        <link rel="preconnect" href="https://fonts.gstatic.com"> 
+        <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
-        <title>Hubspoot</title>
+        <title>Hubspot</title>
     </head>
 <body>
     <!-- header -->
     <header>
 
         <!-- header superiore -->
-        <div>
-
+        <div class="sfondo-f4f9fd">
+            <div class="container">
+                <div class="header-superiore clearfix">
+                    <div class="header-superiore-left float-left">
+                        <ul class="list-inline">
+                            <li>
+                                <a href="">
+                                    <i class="fas fa-globe-europe"></i>
+                                    English 
+                                    <i class="fas fa-chevron-down"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    Contact Us
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="header-superiore-right float-left">
+                        <ul class="list-inline">
+                            <li>
+                                <a href="">
+                                    <i class="fas fa-search"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="btn btn-white" href="">
+                                    Log In
+                                </a>
+                            </li>
+                            <li>
+                                <a class="btn btn-orange" href="">
+                                    GetHubspotFree
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
+        
         <!-- /header superiore -->
-
+        
         <!-- barra menu -->
         <nav>
-
+            <div class="container">
+                <div class="barra-menu clearfix">
+                    <div class="barra-menu-left float-left">
+                        <img src="img/logo.svg" alt="">
+                    </div>
+                    <div class="barra-menu-right float-left">
+                        <ul class="list-inline">
+                            <li>
+                                <a href="">
+                                    Software <i class="fas fa-chevron-down"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    Pricing
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    Resources <i class="fas fa-chevron-down"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    Partners <i class="fas fa-chevron-down"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    About <i class="fas fa-chevron-down"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </nav>
         <!-- /barra menu -->
 
         <!-- jumbotron -->
-        <div>
+        <div class="sfondo-jumbotron">
 
         </div>
         <!-- /jumbotron -->
