completato jumbotron e header inferiore

--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
                 </div>
             </div>
         </div>
-        
         <!-- /header superiore -->
         
         <!-- barra menu -->
@@ -102,13 +101,24 @@
 
         <!-- jumbotron -->
         <div class="sfondo-jumbotron">
-
+            <div class="container">
+                <div class="jumbotron w-50">
+                    <div class="jumbotron-text">
+                        <h1>There's a better way to grow.</h1>
+                        <p>Marketing, sales, and service software thet helps your business grow without compromise. Because "good for the business" shoud also mean "good for the customer."</p>
+                        <a class="btn btn-orange btn-lg" href="">GetHubspotFree</a>
+                        <div>Get started with FREE tools, and upgrade as you grow.</div>
+                    </div>
+                </div>
+            </div>
         </div>
         <!-- /jumbotron -->
 
         <!-- header inferiore -->
         <div>
+            <div class="sfondo-afebe4">
 
+            </div>
         </div>
         <!-- /header inferiore -->
 
@@ -119,9 +129,9 @@
     <main>
 
         <!-- section sfondo grigio -->
-        <section>
+        <section class="sfondo-grigio">
             <div>
-
+                <img src="img/cube.webp" alt="">
             </div>
 
             <div>
