iniziato prima section

--- a/index.html
+++ b/index.html
@@ -132,6 +132,8 @@
         <section class="sfondo-grigio">
             <div>
                 <img src="img/cube.webp" alt="">
+                <div><b>Powerful Alone. Better together</b></div>
+                <p>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They're powerful alone - but even better whene used together.</p>
             </div>
 
             <div>
