--- a/index.html
+++ b/index.html
@@ -136,12 +136,94 @@
                 <p>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its core. They're powerful alone - but even better whene used together.</p>
             </div>
 
-            <div>
-
+            <div class="container">
+                <div class="layout-2-colonne clearfix">
+                    <div class="colonna-layout-2-colonne float-left colonna-sx">
+                        <img src="img/book.svg" alt="">
+                        <a href="" class="btn btn-orange btn-lg">Learn More</a> 
+                    </div>
+                    <div class="colonna-layout-2-colonne float-left colonna-dx">
+                        <div><b>Free HubSpot CRM</b></div>
+                        <p>Everyting you need to organize, truck, and build better relationship with leads and customers. Yes, it's 100% free. Forever.</p>
+                        <div class="layout-2-colonne clearfix">
+                            <div class="colonna-layout-2-colonne float-left">
+                                <b>POPOLAR FEATURE</b> 
+                            </div>
+                            <div class="colonna-layout-2-colonne float-left">
+                               
+                            </div>
+                        </div>
+                        <div class="features">
+                            <ul class="list-inline">
+                                <li><i class="fas fa-check"></i>Contact Insight</li>
+                                <li><i class="fas fa-check"></i>Deals</li>
+                                <li><i class="fas fa-check"></i>Tasks</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
             </div>
 
-            <div>
-
+            <div class="container">
+                <div class="layout-3-colonne clearfix">
+                    <div class="colonna-layout-3-colonne float-left">
+                        <img src="img/buble.svg" alt="">
+                        <div>
+                            <b class="text-22px">Marketing Hub</b> 
+                        </div>
+                        <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound marketing campaigns at scale.</p>
+                        <hr>
+                        <b class="text-18px">POPOLAR FEATURE</b>
+                        <div class="features">
+                            <ul class="list-inline">
+                                <li><i class="fas fa-check"></i>Lead Generation</li>
+                                <li><i class="fas fa-check"></i>Marketing Automation</li>
+                                <li><i class="fas fa-check"></i>Analytics</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <a href="" class="btn btn-orange btn-lg">Learn More</a>
+                        </div> 
+                    </div>
+                    <div class="colonna-layout-3-colonne float-left">
+                        <img src="img/office.svg" alt="">
+                        <div>
+                            <b class="text-22px">Sales Hub</b> 
+                        </div>
+                        <p>Time-saving sales software that helps you get deeper insights into prospects, automate the tasks you hate, and close more deals faster.</p>
+                        <hr>
+                        <b class="text-18px">POPOLAR FEATURE</b>
+                        <div class="features">
+                            <ul class="list-inline">
+                                <li><i class="fas fa-check"></i>Email Tracking</li>
+                                <li><i class="fas fa-check"></i>Meeting Scheduling</li>
+                                <li><i class="fas fa-check"></i>Email Automation</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <a href="" class="btn btn-orange btn-lg">Learn More</a>
+                        </div> 
+                    </div>
+                    <div class="colonna-layout-3-colonne float-left">
+                        <img src="img/table.svg" alt="">
+                        <div>
+                            <b class="text-22px">Service Hub</b> 
+                        </div>
+                        <p>Customer service software to help you connect with customers, exceed expectations, and turn them into promoters that grow your business.</p>
+                        <hr>
+                        <b class="text-18px">POPOLAR FEATURE</b>
+                        <div class="features">
+                            <ul class="list-inline">
+                                <li><i class="fas fa-check"></i>Tickets</li>
+                                <li><i class="fas fa-check"></i>Customer Feedback</li>
+                                <li><i class="fas fa-check"></i>Knowledge Base</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <a href="" class="btn btn-orange btn-lg">Learn More</a>
+                        </div> 
+                    </div>
+                </div>
             </div>
         </section>
         <!-- /section sfondo grigio -->
