finito section sfondo grigio2

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <div class="layout-2-colonne clearfix">
                     <div class="colonna-layout-2-colonne float-left colonna-sx">
                         <img src="img/book.svg" alt="">
-                        <a href="" class="btn btn-orange btn-lg">Learn More</a> 
+                        <a href="" class="btn btn-orange btn-lg text-18px">Learn More</a> 
                     </div>
                     <div class="colonna-layout-2-colonne float-left colonna-dx">
                         <div><b>Free HubSpot CRM</b></div>
@@ -182,7 +182,7 @@
                             </ul>
                         </div>
                         <div>
-                            <a href="" class="btn btn-orange btn-lg">Learn More</a>
+                            <a href="" class="btn btn-orange btn-lg text-16px">Learn More</a>
                         </div> 
                     </div>
                     <div class="colonna-layout-3-colonne float-left">
@@ -201,7 +201,7 @@
                             </ul>
                         </div>
                         <div>
-                            <a href="" class="btn btn-orange btn-lg">Learn More</a>
+                            <a href="" class="btn btn-orange btn-lg text-16px">Learn More</a>
                         </div> 
                     </div>
                     <div class="colonna-layout-3-colonne float-left">
@@ -220,7 +220,7 @@
                             </ul>
                         </div>
                         <div>
-                            <a href="" class="btn btn-orange btn-lg">Learn More</a>
+                            <a href="" class="btn btn-orange btn-lg text-16px">Learn More</a>
                         </div> 
                     </div>
                 </div>
@@ -328,9 +328,21 @@
                     </div>
                 </div>
             </div>
-
+        
             <div>
-
+                <div class="container">
+                    <div class="main-bottom clearfix">
+                        <div class="main-bottom-left float-left">
+                            <div><b>Start Growing With HubSpot Today</b></div>
+                            <p>With tools to make every part of your process more human and a support team excited to help you, getting started with inbound has never been easier.</p>
+                            <a href="" class="btn btn-orange btn-lg text-16px">Get Hubspot Free</a>
+                            <p>Get started with FREE tools, or get more with our premium software.</p>
+                        </div>
+                        <div class="main-bottom-right float-left">
+                            <img src="img/woman.webp" alt="">
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- /section sfondo grigio2 -->
