completato da finire ultimi dettagli

--- a/index.html
+++ b/index.html
@@ -353,20 +353,86 @@
     <footer>
 
         <!-- footer link -->
-        <div>
-
+        <div class="container">
+            <div class="footer-link clearfix">
+                <div class="colonna-footer-link float-left">
+                    <ul class="list-inline">
+                        <li>Increase Your Traffic</li>
+                        <li>Ad Software</li>
+                        <li>Blog Software</li>
+                        <li>SEO Software</li>
+                        <li>Social Media Software</li>
+                        <li>Content Management System</li>
+                    </ul>
+                </div>
+                <div class="colonna-footer-link float-left">
+                    <ul class="list-inline">
+                        <li>Connect With Leads</li>
+                        <li>Find New Prospect</li>
+                        <li>Email Tracking</li>
+                        <li>Sales Email Templates</li>
+                        <li>Click to Call Your Leads</li>
+                        <li>Email Marketing</li>
+                    </ul>
+                </div>
+                <div class="colonna-footer-link float-left">
+                    <ul class="list-inline">
+                        <li>Close and Manage Leads</li>
+                        <li>Document Tracking Tool</li>
+                        <li>Meeting Schedule Tool</li>
+                        <li>Sales Automation Tool</li>
+                        <li>Lead Management Tool</li>
+                        <li>Pipeline Management Tool</li>
+                    </ul>
+                </div>
+                <div class="colonna-footer-link float-left">
+                    <ul class="list-inline">
+                        <li>Support and Tools</li>
+                        <li>HubSpot Partners</li>
+                        <li>Join a Local User Group</li>
+                        <li>Get a Free Website Report</li>
+                        <li>HubSpot Templates</li>
+                        <li>Free Tools & Generators</li>
+                        <a href="">Contact HubSpot Support</a>
+                        <li class="social">
+                            <i class="fab fa-facebook-f"></i>
+                            <i class="fab fa-instagram"></i>
+                            <i class="fab fa-youtube"></i>
+                            <i class="fab fa-twitter"></i>
+                            <i class="fab fa-linkedin-in"></i>
+                        </li>
+                        
+                    </ul>
+                </div>
+            </div>
         </div>
         <!-- /footer link -->
 
         <!-- footer lingue -->
-        <div>
-
+        <div class="container">
+            <div class="footer-lingue">
+                <span>English</span>
+                <span>Deutsch</span>
+                <span>日本語</span>
+                <span>Español</span>
+                <span>Português</span>
+                <span>Français</span>
+            </div>
         </div>
         <!-- /footer lingue -->
 
         <!-- footer copyright -->
-        <div>
-
+        <div class="container">
+            <div class="footer-copyright clearfix">
+                <div class="colonna-footer-copyright float-left">
+                    <img src="img/logo-white.svg" alt="">
+                    <div>Copyright &copy; HubSpot, Inc.</div>
+                </div>
+                <div class="colonna-footer-copyright float-left">
+                    <span>Legal Stuff</span>
+                    <span>Privacy Policy</span>
+                </div>
+            </div>
         </div>
         <!-- /footer copyright -->
 
