--- a/index.html
+++ b/index.html
@@ -15,47 +15,50 @@
     <header>
 
         <!-- header superiore -->
-        <div class="sfondo-f4f9fd">
-            <div class="container">
-                <div class="header-superiore clearfix">
-                    <div class="header-superiore-left float-left">
-                        <ul class="list-inline">
-                            <li>
-                                <a href="">
-                                    <i class="fas fa-globe-europe"></i>
-                                    English 
-                                    <i class="fas fa-chevron-down"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="">
-                                    Contact Us
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="header-superiore-right float-left">
-                        <ul class="list-inline">
-                            <li>
-                                <a href="">
-                                    <i class="fas fa-search"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a class="btn btn-white" href="">
-                                    Log In
-                                </a>
-                            </li>
-                            <li>
-                                <a class="btn btn-orange" href="">
-                                    GetHubspotFree
-                                </a>
-                            </li>
-                        </ul>
+        <div class="position-fixed">
+            <div class="sfondo-f4f9fd">
+                <div class="container">
+                    <div class="header-superiore clearfix">
+                        <div class="header-superiore-left float-left">
+                            <ul class="list-inline">
+                                <li>
+                                    <a href="">
+                                        <i class="fas fa-globe-europe"></i>
+                                        English 
+                                        <i class="fas fa-chevron-down"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="">
+                                        Contact Us
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="header-superiore-right float-left">
+                            <ul class="list-inline">
+                                <li>
+                                    <a href="">
+                                        <i class="fas fa-search"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="btn btn-white" href="">
+                                        Log In
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="btn btn-orange" href="">
+                                        GetHubspotFree
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        
         <!-- /header superiore -->
         
         <!-- barra menu -->
